--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,73 @@
 # Core Framework
 fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.3
-python-multipart==0.0.6
+uvicorn[standard]==0.27.1
+pydantic==2.10.4
+python-multipart==0.0.9
 
 # Database
 sqlalchemy==2.0.36
-sqlcipher3==0.5.2
-alembic==1.13.1
+alembic==1.13.2
 
 # Security & Authentication
 passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
-cryptography==42.0.2
+cryptography==42.0.5
 
 # Web Scraping & Automation
-playwright==1.41.0
+playwright==1.41.2
 playwright-stealth==1.0.6
 beautifulsoup4==4.12.3
-lxml==5.1.0
-requests==2.31.0
-httpx==0.26.0
+lxml==5.2.2
+requests==2.32.3
+httpx==0.27.0
 aiohttp==3.10.10
 
 # Social Media Tools
 snscrape==0.7.0.20230622
 telethon==1.34.0
-yt-dlp==2024.1.7
+yt-dlp==2024.10.7
 
-# Facial Recognition & AI
-face-recognition==1.3.0
+# Facial Recognition & AI (without dlib)
 deepface==0.0.87
-opencv-python==4.9.0.80
-dlib==19.24.2
-Pillow==10.2.0
+opencv-python==4.10.0.84
+mediapipe==0.10.14
+Pillow==10.4.0
 pytesseract==0.3.10
-easyocr==1.7.0
+easyocr==1.7.1
 
 # NLP & Sentiment Analysis
-transformers==4.37.2
-torch==2.2.0
+transformers==4.46.2
+tokenizers==0.20.0
+torch==2.3.1
 textblob==0.17.1
 nltk==3.8.1
 wordcloud==1.9.3
 
 # Data Processing
-pandas==2.2.0
-numpy==1.26.3
+pandas==2.2.2
+numpy==2.0.2
 openpyxl==3.1.2
-xlsxwriter==3.1.9
+xlsxwriter==3.2.0
 
 # Report Generation
-jinja2==3.1.3
-weasyprint==60.2
-reportlab==4.0.9
+jinja2==3.1.4
+weasyprint==61.0
+reportlab==4.2.0
 qrcode==7.4.2
-pypdf==4.0.1
+pypdf==4.2.0
 
 # Email & Phone Validation
-phonenumbers==8.13.27
-email-validator==2.1.0.post1
+phonenumbers==8.13.31
+email-validator==2.1.1
 
 # Utilities
 python-dotenv==1.0.1
-python-dateutil==2.8.2
+python-dateutil==2.9.0
 pytz==2024.1
 schedule==1.2.1
-tqdm==4.66.1
-aiofiles==23.2.1
+tqdm==4.66.4
+aiofiles==24.1.0
 
 # Testing
-pytest==8.0.0
-pytest-asyncio==0.23.4
+pytest==8.2.2
+pytest-asyncio==0.24.0
